add note about single-end

--- a/paper/document.tex
+++ b/paper/document.tex
@@ -130,8 +130,9 @@ last & 392 & last-bisulfite-paired.sh\\\botrule
 
 \section{Discussion}
 
-While \textit{bwa-meth} is limited only to paired-end reads from the directional
-protocol, we show its utility here on real and simulated data. Since it consists
+While \textit{bwa-meth} can align single-end reads, it has been optimized for
+paired-end reads from the directional protocol, we show its utility here on real
+and simulated data. Since it consists
 of fewer than 400 lines of code (compared to, e.g. about 8000 for Bismark) and runs
 quickly, it can be used as a platform to test other optimizations.
 
