Partial update to new methods

--- a/paper/document.bib
+++ b/paper/document.bib
@@ -8,6 +8,17 @@
 	pages = {232}
 },
 
+@article{shrestha,
+  title={An approximate Bayesian approach for mapping paired-end DNA reads to a reference genome},
+  author={Shrestha, Anish Man Singh and Frith, Martin C},
+  journal={Bioinformatics},
+  volume={29},
+  number={8},
+  pages={965--972},
+  year={2013},
+  publisher={Oxford Univ Press}
+},
+
 @article{gsnap,
 	title = {Fast and {SNP-tolerant} detection of complex variants and splicing in short reads},
 	volume = {26},
