--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -32,6 +32,21 @@
 
 \maketitle
 
+\section{Aligners Compared}
+
+\begin{table}[!t]
+\processtable{Alignment Methods Compared\label{Tab:01}}
+{\begin{tabular}{lll}\toprule
+software & version & command\\\midrule
+bismark & 0.10.1 & bismark --gzip --maxins 1000 -n 3 -l 20 --bam\\
+bsmap & 2.74 & bsmap -s12 -v3 -m0 -x1000 -S42 -n0 -s12 -I1\\
+bwa-meth & 0.06 & bwa-meth\\
+gsnap & 2014-02-28 & gsnap --npaths 1 --quiet-if-excessive\\
+last & 392 & last-bisulfite-paired.sh\\\botrule
+\end{tabular}}{We used a modified version of the calling script for last}
+\end{table}
+
+
 \section{Comparison On Real Data}
 
 We compared 5 aligners on real data as described in the text. Supplemental
