--- a/paper/document.bib
+++ b/paper/document.bib
@@ -8,6 +8,16 @@
 	pages = {232}
 },
 
+@article{bsmooth,
+  title={BSmooth: from whole genome bisulfite sequencing reads to differentially methylated regions},
+  author={Hansen, Kasper D and Langmead, Benjamin and Irizarry, Rafael A and others},
+  journal={Genome Biol},
+  volume={13},
+  number={10},
+  pages={R83},
+  year={2012}
+}
+
 @article{shrestha,
   title={An approximate Bayesian approach for mapping paired-end DNA reads to a reference genome},
   author={Shrestha, Anish Man Singh and Frith, Martin C},
