--- a/paper/document.tex
+++ b/paper/document.tex
@@ -182,10 +182,8 @@ scores and outputs an alignment file which is immediately usable by downstream
 tools.
 
 \section*{Acknowledgement}
-We would like to thank Devon Ryan for several helpful conversations.
-
+We thank Devon Ryan for several helpful conversations.
 \paragraph{Funding\textcolon} This was funded by R01 HL097163, R01 HL101251, 1I01BX001534, RC2 HL101715, N01 AI90052, and S10 RR031832.
-
 %\bibliographystyle{natbib}
 %\bibliographystyle{achemnat}
 %\bibliographystyle{plainnat}
