--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -58,11 +58,11 @@
 6. simplicity -- we have carefully designed bwa-meth to be quite simple and
    the code readable so that enhancements are simple. For example, see \#7.
 
-7. strand-specificity -- After we posted bwa-meth on seqanswers, Devon Ryan,
+7. strand-specificity -- Devon Ryan,
    the author of Bison, noted that many capture methods target only the reverse
    strand -- commonly called the original bottom. Though this would be simple to
    add to any aligner, ours is the only one that currently supports this. See
-   from the supplemental figures the reduction in off-target reads that results
+   from the supplemental figure 5 for the reduction in off-target reads that results
    from only considering reads that align to the original bottom strand.
 
 8. specificity and sensitivity -- while the difference between aligners in
