--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -79,7 +79,7 @@
 \section{Aligners Compared}
 
 \begin{table}[!htp]
-%\processtable{Alignment Methods Compared\label{Tab:01}}
+\caption{Methods Compared}
 {\begin{tabular}{lll}\\\toprule
 software & version & arguments\\\midrule
 bismark (bowtie1) & 0.10.1 & --gzip --bam -n 2 -l 24\\
@@ -165,19 +165,29 @@ from the paper}\label{suppfig:04}
 %http://truben.no/latex/table/
 \begin{table}[H]
     \centering
-    \caption{Resources on simulated data}
+    \caption{Resources on simulated data
+(programs run with more processes will use more memory)}
     \begin{tabular}{lllll} \hline
     trimmed & program & time(min) & mem(GB) & dataset \\ \hline
-    no      & bis1    & 62.00     & 8.27    & sim     \\
-    no      & bsmap   & 131.92    & 22.93   & sim     \\
-    no      & bwa     & 122.05    & 16.47   & sim     \\
-    no      & gsnap   & 244.82    & 9.50    & sim     \\
-    no      & last    & 131.17    & 25.90   & sim     \\
-    yes     & bis1    & 62.13     & 8.27    & sim     \\
-    yes     & bsmap   & 65.00     & 22.92   & sim     \\
-    yes     & bwa     & 160.39    & 20.98   & sim     \\
-    yes     & gsnap   & 33.21     & 9.55    & sim     \\
-    yes     & last    & 144.46    & 25.90   & sim     \\
+
+no &    bis1 & 62.98 & 8.28 & sim \\
+no &    bis2 & 232.53 & 9.56 & sim \\
+no &    bison & 173.19 & 9.10 & sim \\
+no &    bsmap & 215.35 & 22.54 & sim \\
+no &    bsmooth & 316.66 & 9.30 & sim \\
+no &    bwa & 111.90 & 18.60 & sim \\
+no &    gsnap & 238.48 & 10.20 & sim \\
+no &    last & 137.17 & 25.90 & sim \\
+
+yes &    bis1 & 61.73 & 8.27 & sim \\
+yes &    bis2 & 219.23 & 9.45 & sim \\
+yes &    bison & 147.64 & 9.15 & sim \\
+yes &    bsmap & 75.32 & 22.87 & sim \\
+yes &    bsmooth & 291.70 & 9.17 & sim \\
+yes &    bwa & 163.70 & 21.57 & sim \\
+yes &    gsnap & 74.72 & 11.73 & sim \\
+yes &    last & 109.39 & 25.90 & sim \\
+
     \end{tabular}
 \end{table}
 
