--- a/paper/document.tex
+++ b/paper/document.tex
@@ -17,7 +17,7 @@ and David A. Schwartz\,$^1$%
 \address{
     $^{1}$Department of Medicine, University of Colorado Denver, School of Medicine, Denver, Colorado, USA. 80045 \\
     $^{2}$University of Colorado Cancer Center, Molecular Oncology Program,
-    Aurora, Colorado, United States
+    Aurora, Colorado, USA
 }
 
 \history{Received on XXXXX; revised on XXXXX; accepted on XXXXX}
@@ -31,11 +31,11 @@ and David A. Schwartz\,$^1$%
     %http://www.oxfordjournals.org/our_journals/bioinformatics/for_authors/general.html
 
 \section{Summary:}
-We sought to perform a comparison using long reads to determine which
-bisulfite-sequence aligners were most accurate and efficient on current
-data and to evaluate a novel software tool, \textit{bwa-meth}, built on
-a traditional mapper that supports insertions, deletions and local
-alignment. We gauge accuracy by comparing the number of on and off-target
+We introduce a new tool, \textit{bwa-meth}, to align bisulfite-treated
+sequences and compare it to existing aligners. We show that it is fast
+and accurate even without quality-trimming and 
+the output is immediately usable by downstream tools.
+We gauge accuracy by comparing the number of on and off-target
 reads from a targeted sequencing project and by simulations.
 
 \section{Availability and Implementation:}
@@ -51,21 +51,21 @@ Supplemental Information I
 Bisulfite sequencing (BS-Seq) is a common way to explore DNA methylation status.
 As a result, software \citep{frithlast,methylcoder,gsnap,krueger2011,bsmap,bsmooth}
 have been developed to map sequence reads treated with bisulfite to a reference genome.
-Many of these were developed on and optimized for shorter reads
-than what are common from today's sequencers. Many of these have compared alignment
-statistics on real \citep{methylcoder,bsmap} and simulated \citep{frithlast} reads,
-however these are limited by knowledge of the ground-truth and assumptions of
+Many of these rely on global alignment which performs best when the reads are quality-trimmed
+before use. Previous studies have compared alignment statistics on 
+real \citep{methylcoder,bsmap,shrestha} and simulated \citep{frithlast} reads,
+however most of these are limited by knowledge of the ground-truth and assumptions of
 the simulation, respectively.
 
 Here, we present an analysis of current BS-Seq mappers including the "four-base" aligners
-Last \citep{frithlast}, GSNAP \citep{gsnap} and BSMAP \citep{bsmap} and the most-used
-"three-base" aligner Bismark \citep{krueger2011} which performs \emph{in silico} conversion
-of cytosines to thymines. In addtion, we introduce our
+Last \citep{frithlast}, GSNAP \citep{gsnap} and BSMAP \citep{bsmap} as well as the
+"three-base" aligners BSmooth \citep{bsmooth}, Bison, and Bismark \citep{krueger2011} which
+perform \emph{in silico} conversion of cytosines to thymines. In addtion, we introduce our
 own, simple three-base aligner that wraps \textit{BWA mem} \citep{bwamem}.
 
 The comparison is performed on 100-base paired-end reads
 which are of modest length by current standards, but, to our knowledge, longer than
-utilized in any comparison. We hypothesized that having long, paired reads, with up
+utilized in any comparison. We hypothesized that long, paired reads, with up
 to 200 bases from the same genomic region, could change the decision on which
 alignment method performed the best. 
 We found limitations to exisiting aligners including the writing of large temporary
@@ -76,9 +76,10 @@ a BS-Seq aligner based on BWA mem \citep{bwamem} to address these
 limitations. This new aligner, 
 \textit{bwa-meth}, allows indels, local alignments, and it never writes a
 temporary-file of the reads to disk, instead streaming the \emph{in silico} converted
-reads directly to the aligner. In addition, it works well without quality-trimming,
-thereby reducing storage requirements 3-fold by not creating quality-trimmed or
-converted reads.
+reads directly to the aligner and streaming the alignments directly to a well-formatted
+alignment file suitable for use in downstream tools. In addition, it works well without
+quality-trimming, thereby reducing storage requirements 3-fold by not creating
+quality-trimmed or converted reads.
 
 \section{Approach}
 We introduce a novel approach for determining the accuracy of an aligner;
@@ -92,22 +93,24 @@ aligners are subject to the same assumptions. With those constraints, we can
 plot a receiver operating curve (ROC) with true positives as reads within
 and false positives as reads outside of the target regions.
 \citealp{shrestha} performed a similar unbiased analysis on 35 base reads sequenced from
-the X chromosome and gauging a read as accurately mapped if it should be aligned
+the X chromosome and gauged a read as accurately mapped if it aligned
 to the X chromosome; here, we map to the entire genome with 100-base paired-end reads.
 
 In addition, we perform simulations with 100-base paired-end reads using
-the software from the authors of Bismark. All data were aligned to mouse
-genome version \textit{mm10}.
-
+Sherman (v0.1.6), the software from the authors of Bismark. All data were
+aligned to mouse genome version \textit{mm10}.
 
 \begin{methods}
 \section{Methods}
-We aligned real and simulated data, both trimmed by quality (using Trim Galore
-[\href{http://www.bioinformatics.babraham.ac.uk/projects/trim\_galore/}{http://www.bioinformatics.babraham.ac.uk/projects/trim\_galore/}] default parameters) and un-trimmed, using the software and versions in Supplemental Table 1.
+We aligned real and simulated data, both as-is and trimmed by quality (using Trim Galore
+[\href{http://www.bioinformatics.babraham.ac.uk/projects/trim\_galore/}{http://www.bioinformatics.babraham.ac.uk/projects/trim\_galore/}]
+default parameters), using the software and versions in Supplemental Table 1.
 We evaluated a few parameters for each method and report only the
-best-performing here.
-We considered a real read to be in the target region if it
-was within 1001 bases of the target area. 
+best-performing here. Likely, every aligner could show improved results with
+exhaustive selection of the parameters, but this is a fair representation of
+what we understand to be reasonable selections.
+We considered a real read to be in the target region if it was within 1001 bases
+of the target area.
 
 \end{methods}
 
@@ -121,8 +124,11 @@ was within 1001 bases of the target area.
 While \textit{bwa-meth} can align single-end reads, it has been optimized for
 paired-end reads from the directional protocol, we show its utility here on real
 and simulated data. Since it consists
-of fewer than 600 lines of code (compared to, e.g. about 8000 for Bismark) and runs
-quickly, it can be used as a platform to test other optimizations.
+of fewer than 600 lines of code (10-fold less than other aligners) and runs
+quickly, it can be used as a platform to test other optimizations. For example
+in Supplemental Figure 5, we show a feature that further reduces the
+number of off-target reads by considering only the single strand targetted by
+the SureSelect protocol.
 
 \subsection{Accuracy}
 For the aligners that report a range of mapping quality
@@ -133,29 +139,33 @@ other aligners, we plot their single location. Figure \ref{fig:01} shows
 the on and off-target reads for our real paired-end data. Last and 
 \textit{bwa-meth} align the most reads on target with a low percent
 of off-target reads, but Last provides better control over the number
-of off-target reads. Bismark also has a low percentage of off-target reads.
+of off-target reads. On trimmed data, Bison performs very well and has
+even fewer off-target reads than Last.
+Bismark performance varies depending on whether it uses bowtie version
+1 or 2 for the backend but in either case, (as with all of the bowtie-backed
+aligners) it performs better with trimmed reads.
 
-Similar comparisons are shown in  Supplemental Figures 2
+Similar comparisons are shown in Supplemental Figures 2
 for trimmed data and for simulated data in Supplemental Figures 3 and 4.
 \textit{Bwa-meth} does out-perform Last (along with the other aligners)
-for simulated data although bismark with bowtie2 also performs very well
-after trimming.
+for simulated data.
 
 \subsection{Computational Resources}
 Within reason, we are more interested in the accuracy of a
 method than the speed. In general the aligners are comparable in terms of
 speed. While Bismark with bowtie1 is quite fast on the simulated data it
-can not use multiple processes and so takes the longest user-time. bsmap
+can not use multiple processes and so takes the longest user-time. Bsmap
 takes the longest CPU time on the real data. We report the exact 
 timings and maximum memory use in Supplemental Information.
 Bsmap uses the least disk, never writing an index of the reference genome
 and only writing the alignment files. All other aligners write an index of
-the reference genome. Last and bismark both write additional copies of the
+the reference genome. Last, bsmooth, and bismark write additional copies of the
 reads to disk. This is to aid in parallelization in the case of Last and to
-write the \emph{in silico} converted reads in the case of bismark. While
-these could presumably be addressed in either case, they are considerations
-at the time of writing. It is common to get 10GB of compressed sequence data
-from 10 samples. If an aligner must write trimmed and converted copies of the
+write the \emph{in silico} converted reads in the case of bismark and bsmooth.
+While these could be addressed in either case, they are considerations
+at the time of writing as are the output formats which require varying degrees
+of post-processing to be using by other tools.
+In addition, if an aligner must write trimmed and converted copies of the
 sequence data, this increases the storage requirements enough to be a
 burden in our experience. \textit{Bwa-meth} avoids writing the \emph{in silico}
 converted reads to disk by streaming them directly to the aligner and works
