clean up extra text

--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -155,7 +155,7 @@ Supplemental Figure 3 below shows the result for these simulations.
 \begin{figure}[H]%figure3
     \centerline{\includegraphics[width=86mm]{sim-quals.eps}}
     \caption{Percent of paired-end, \emph{simulated} 100-base reads on (y) and off (x) target for the tested aligners. Aligners that report mapping quality are shown as connected dots for each quality cut-off. Reads are limited to those considered as primary, mapped alignments by the aligner.
-from the paper}\label{suppfig:03}
+}\label{suppfig:03}
 \end{figure}
 
 Supplemental Figure 4 below shows the result for trimmed and simulated reads.
@@ -166,7 +166,7 @@ since we are interested in the overall mapping rate.
 \begin{figure}[H]%figure3
     \centerline{\includegraphics[width=86mm]{sim-trim-quals.eps}}
     \caption{Percent of paired-end, \emph{trimmed}, \emph{simulated} 100-base reads on (y) and off (x) target for the tested aligners. Aligners that report mapping quality are shown as connected dots for each quality cut-off. Reads are limited to those considered as primary, mapped alignments by the aligner.
-from the paper}\label{suppfig:04}
+}\label{suppfig:04}
 \end{figure}
 
 \subsection{Resources}
