--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -101,7 +101,7 @@ We compared 7 aligners on real data as described in the text. Supplemental
 Figure 1 below shows a color version of Figure 1 from the main text.
 
 \begin{figure}[H]%supplemental figure1
-    \centerline{\includegraphics[width=86mm]{supp-1-real-qual-summary.eps}}
+    \centerline{\includegraphics[width=86mm]{real-quals.eps}}
     \caption{Percent of paired-end, 100-base reads on (y) and off (x) target for the tested aligners. Aligners that report mapping quality are shown as connected dots for each quality cut-off. Reads are limited to those considered as primary, mapped alignments by the aligner. This is a color version of figure 1 from the paper}\label{suppfig:01}
 \end{figure}
 
